# telephony-service

./: .bzrignore  AbstractButton.qml  Button.qml  CMakeLists.txt  CallButton.qml  CallEndedPane.qml  CallLogDelegate.qml  CallLogList.qml  CallPanel.qml  ColoredButton.qml  ContactDelegate.qml  ContactDetails.qml  ContactDetailsDelegate.qml  ContactDetailsHeader.qml  ContactDetailsModel.qml  ContactList.qml  ContactWatcher.qml  ContactsModel.qml  ContactsPanel.qml  ContactsSearchCombo.qml  DropDownSearch.qml  FavouriteContactList.qml  FilterModel.qml  IconButton.qml  Keypad.qml  KeypadButton.qml  KeypadEntry.qml  KeypadView.qml  LiveCall.qml  MessageDelegate.qml  Messages.qml  MessagesFooter.qml  MessagesHeader.qml  MessagesList.qml  MessagesModel.qml  MessagesPanel.qml  MessagesSearchEntry.qml  MessagesView.qml  NewMessageButton.qml  NotificationPane.qml  (+43 more)
PhoneAppApprover/: CMakeLists.txt  PhoneAppApprover.xml  main.cpp  messagingmenu.h  org.freedesktop.Telepathy.Client.PhoneAppApprover.service  phone-app-call.desktop  phone-app-sms.desktop  phoneappapprover.cpp  phoneappapproverdbus.cpp  phoneappapproverdbus.h  textchannelobserver.cpp  textchannelobserver.h  voicemailindicator.cpp
TelephonyApp/: CMakeLists.txt  abstractloggermodel.cpp  abstractloggermodel.h  buttonmaskeffect.cpp  buttonmaskeffect.h  callentry.cpp  callentry.h  calllogmodel.cpp  calllogmodel.h  calllogproxymodel.cpp  calllogproxymodel.h  callmanager.cpp  callmanager.h  channelhandler.cpp  channelhandler.h  channelobserver.cpp  channelobserver.h  chatmanager.cpp  chatmanager.h  components.cpp  components.h  contactaddress.cpp  contactaddress.h  contactcustomid.cpp  contactcustomid.h  contactdetail.cpp  contactdetail.h  contactemailaddress.cpp  contactemailaddress.h  contactentry.cpp  contactentry.h  contactmanager.cpp  contactmanager.h  contactmodel.cpp  contactmodel.h  contactname.cpp  contactname.h  contactonlineaccount.cpp  contactonlineaccount.h  contactphonenumber.cpp  (+29 more)
TelephonyAppApprover/: CMakeLists.txt  TelephonyAppApprover.client  TelephonyAppApprover.xml  com.canonical.TelephonyApp.approver.service  main.cpp  messagingmenu.cpp  messagingmenu.h  org.freedesktop.Telepathy.Client.TelephonyAppApprover.service  telepathyhelper.cpp  telepathyhelper.h  telephony-app-approver.desktop  telephony-app-phone.desktop  telephony-app-sms.desktop  telephonyappapprover.cpp  telephonyappapprover.h  telephonyappapproverdbus.cpp  telephonyappapproverdbus.h  telephonyapputils.cpp  telephonyapputils.h  textchannelobserver.cpp  textchannelobserver.h  voicemailindicator.cpp  voicemailindicator.h
approver/: 50-com.canonical.TelephonyServiceApprover.pkla  Approver.xml  CMakeLists.txt  PhoneAppApprover.xml  TelephonyServiceApprover.client  TelephonyServiceObserver.client  applicationutils.cpp  applicationutils.h  approver.cpp  approver.h  approverdbus.cpp  approverdbus.h  com.canonical.TelephonyServiceApprover.policy  com.canonical.TelephonyServiceApprover.xml  greetercontacts.cpp  greetercontacts.h  main.cpp  messagingmenu.cpp  messagingmenu.h  org.freedesktop.Telepathy.Client.PhoneAppApprover.service.in  org.freedesktop.Telepathy.Client.TelephonyServiceApprover.service.in  phone-app-approver.desktop  phone-app-approver.desktop.in  phone-app-call.desktop.in  phone-app-sms.desktop.in  phoneappapprover.cpp  phoneappapprover.h  phoneappapproverdbus.cpp  phoneappapproverdbus.h  phoneapputils.cpp  phoneapputils.h  telephony-service-approver.desktop.in  telephony-service-sms.desktop.in  textchannelobserver.cpp  textchannelobserver.h  voicemailindicator.cpp  voicemailindicator.h
handler/: CMakeLists.txt  ChatStartingJob.xml  Handler.xml  MessageSendingJob.xml  PhoneAppHandler.client  PhoneAppHandler.xml  TelephonyServiceHandler.client  accountproperties.cpp  accountproperties.h  audioroutemanager.cpp  audioroutemanager.h  callagent.cpp  callagent.h  callhandler.cpp  callhandler.h  chatstartingjob.cpp  chatstartingjob.h  com.canonical.PhoneAppHandler.service.in  com.canonical.TelephonyServiceHandler.service.in  displaynamesettings.cpp  displaynamesettings.h  farstreamchannel.cpp  farstreamchannel.h  handler.cpp  handler.h  handlerdbus.cpp  handlerdbus.h  main.cpp  messagejob.cpp  messagejob.h  messagesendingjob.cpp  messagesendingjob.h  org.freedesktop.Telepathy.Client.PhoneAppHandler.service  org.freedesktop.Telepathy.Client.PhoneAppHandler.service.in  org.freedesktop.Telepathy.Client.TelephonyServiceHandler.service.in  phoneapphandler.cpp  phoneapphandler.h  phoneapphandlerdbus.cpp  phoneapphandlerdbus.h  powerddbus.cpp  (+6 more)
indicator/: CMakeLists.txt  DBusTypes.h  Indicator.xml  TelephonyServiceIndicator.client  authhandler.cpp  authhandler.h  callchannelobserver.cpp  callchannelobserver.h  displaynamesettings.cpp  displaynamesettings.h  indicatordbus.cpp  indicatordbus.h  main.cpp  messagingmenu.cpp  messagingmenu.h  metrics.cpp  metrics.h  notificationmenu.cpp  notificationmenu.h  org.freedesktop.Telepathy.Client.TelephonyServiceIndicator.service.in  telephony-service-call.desktop.in  telephony-service-sms.desktop.in  textchannelobserver.cpp  textchannelobserver.h  ussdindicator.cpp  ussdindicator.h  ussdmenu.cpp  ussdmenu.h  voicemailindicator.cpp  voicemailindicator.h
libphoneapp/: CMakeLists.txt  callentry.cpp  callentry.h  callmanager.cpp  callmanager.h  channelhandler.cpp  channelhandler.h  channelobserver.cpp  channelobserver.h  chatmanager.cpp  chatmanager.h  contactaddress.cpp  contactaddress.h  contactdetail.cpp  contactdetail.h  contactemailaddress.cpp  contactentry.cpp  contactentry.h  contactmodel.cpp  contactmodel.h  contactname.cpp  contactname.h  contactonlineaccount.cpp  contactonlineaccount.h  contactphonenumber.cpp  contactphonenumber.h  phonenumberutils.h  phoneutils.cpp  phoneutils.h  ringtone.cpp  ringtone.h  telepathyhelper.cpp  telepathyhelper.h
libtelephonyapp/: CMakeLists.txt  callentry.cpp  callentry.h  callmanager.cpp  callmanager.h  channelhandler.cpp  channelhandler.h  channelobserver.cpp  channelobserver.h  chatmanager.cpp  chatmanager.h  contactaddress.cpp  contactaddress.h  contactdetail.cpp  (+17 more)
(+641 files in other folders)
